--- a/PostCommentApi/docker-compose.yaml
+++ b/PostCommentApi/docker-compose.yaml
@@ -4,10 +4,10 @@ services:
   mysql:
     image: mysql:8.0
     container_name: mysql-postcomment
-    restart: always
+    # restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: Mypassword!
-      MYSQL_DATABASE: postcommentdb
+      MYSQL_ROOT_PASSWORD: ${MY_SQL__ROOT_PASSWORD}
+      MYSQL_DATABASE: social
     ports:
       - "3307:3306"
     volumes:
@@ -16,20 +16,35 @@ services:
   redis:
     image: redis:latest
     container_name: redis-postcomment
-    restart: always
+    # restart: always
     ports:
       - "6379:6379"
 
+  minio:
+    image: minio/minio:latest
+    container_name: minio-postcomment
+    # restart: always
+    environment:
+      MINIO_ROOT_USER: ${MINIO__ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO__ROOT_PASSWORD}
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+    command: minio server /data --console-address ":9001"
+
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     container_name: postcomment-api
-    restart: always
+    # restart: always
     ports:
       - "8080:8080"
     environment:
       ASPNETCORE_URLS: "http://0.0.0.0:8080"
-      ConnectionStrings__Default: "server=mysql;database=social;user=root;password=Mypassword!"
-      Redis__ConnectionString: "redis:6379"
+
     depends_on:
       - mysql
       - redis
@@ -39,7 +54,8 @@ services:
     container_name: wrk-benchmark
     depends_on:
       - api
-    entrypoint: [ "tail", "-f", "/dev/null" ]  # chạy nền để bạn exec vào
+    entrypoint: ["tail", "-f", "/dev/null"] # chạy nền để bạn exec vào
 
 volumes:
   mysql_data:
+  minio_data:
