--- a/PostCommentApi/docker-compose.yaml
+++ b/PostCommentApi/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   mysql:
     image: mysql:8.0
-    container_name: mysql-postcomment
+    container_name: mysql
     # restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${MY_SQL__ROOT_PASSWORD}
@@ -15,14 +15,14 @@ services:
 
   redis:
     image: redis:latest
-    container_name: redis-postcomment
+    container_name: redis
     # restart: always
     ports:
       - "6379:6379"
 
   minio:
     image: minio/minio:latest
-    container_name: minio-postcomment
+    container_name: minio
     # restart: always
     environment:
       MINIO_ROOT_USER: ${MINIO__ROOT_USER}
